k8s/07-review-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review-worker
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: review-worker
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: review-worker
    spec:
      volumes:
        - name: gcp-sa-secret
          secret:
            secretName: gcp-sa-secret
 
      containers:
        - name: review-worker
          image: jrcarrasqueira/review-worker:v1.0
          imagePullPolicy: Always
          volumeMounts:
            - name: gcp-sa-secret
              mountPath: /var/secrets/google
              readOnly: true
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "300m"
