k8s/04-users-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-service
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8001"
      labels:
        app: users-service
    spec:
      containers:
        - name: users-service
          image: tpina17/users-service:v18
          imagePullPolicy: Always
          ports:
            - name: rest
              containerPort: 8001
            - name: grpc
              containerPort: 50053
          readinessProbe:
            httpGet:
              path: /health
              port: 8001
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8001
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "300m"
---
apiVersion: v1
kind: Service
metadata:
  name: users-service
  namespace: default
spec:
  selector:
    app: users-service
  ports:
    - name: rest
      port: 8001
      targetPort: 8001
    - name: grpc
      port: 50053
      targetPort: 50053
  type: ClusterIP
