k8s/05-movies-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movies-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movies-service
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8002"
      labels:
        app: movies-service
    spec:
      containers:
        - name: movies-service
          image: jrcarrasqueira/movies-service:v6
          imagePullPolicy: Always
          ports:
            - name: rest
              containerPort: 8002
            - name: grpc
              containerPort: 50054
          readinessProbe:
            httpGet:
              path: /health
              port: 8002
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8002
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "300m"
---
apiVersion: v1
kind: Service
metadata:
  name: movies-service
  namespace: default
spec:
  selector:
    app: movies-service
  ports:
    - name: rest
      port: 8002
      targetPort: 8002
    - name: grpc
      port: 50054
      targetPort: 50054
  type: ClusterIP
