k8s/09-badges-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: badges-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: badges-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8006"
      labels:
        app: badges-service
    spec:
      containers:
      - name: badges-service
        image: leonor2004/badges-service:v15
        imagePullPolicy: Always
        ports:
        - name: rest
          containerPort: 8006
        - name: grpc
          containerPort: 50058
        readinessProbe:
          httpGet:
            path: /health
            port: 8006
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8006
          initialDelaySeconds: 30
          periodSeconds: 30
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "300m"
---
apiVersion: v1
kind: Service
metadata:
  name: badges-service
  namespace: default
spec:
  selector:
    app: badges-service
  ports:
  - name: rest
    port: 8006
    targetPort: 8006
  - name: grpc
    port: 50058
    targetPort: 50058
  type: ClusterIP
