k8s/11-watchlists-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: watchlists-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: watchlists-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8007"
      labels:
        app: watchlists-service
    spec:
      containers:
      - name: watchlists-service
        image: leonor2004/watchlists-service:v15
        imagePullPolicy: Always
        ports:
        - name: rest
          containerPort: 8007
        - name: grpc
          containerPort: 50059
        readinessProbe:
          httpGet:
            path: /health
            port: 8007
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8007
          initialDelaySeconds: 30
          periodSeconds: 30
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "300m"
---
apiVersion: v1
kind: Service
metadata:
  name: watchlists-service
  namespace: default
spec:
  selector:
    app: watchlists-service
  ports:
  - name: rest
    port: 8007
    targetPort: 8007
  - name: grpc
    port: 50059
    targetPort: 50059
  type: ClusterIP
