k8s/17-monitoring-bridge.yaml
apiVersion: v1
kind: Service
metadata:
  name: monitoring-grafana
  namespace: default
spec:
  type: ExternalName
  externalName: monitoring-grafana.monitoring.svc.cluster.local
  ports:
  - port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: monitoring-kube-prometheus-prometheus
  namespace: default
spec:
  type: ExternalName
  externalName: monitoring-kube-prometheus-prometheus.monitoring.svc.cluster.local
  ports:
  - port: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-redirect-from: "~^http://[^/]+/(.*)"
    nginx.ingress.kubernetes.io/proxy-redirect-to: "/prometheus/$1"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: monitoring-grafana
                port:
                  number: 80
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: monitoring-kube-prometheus-prometheus
                port:
                  number: 9090
